# mindm

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  llms.txt  package_skills.py  pyproject.toml  setup.py
.github/workflows/: publish.yml  publish_docs.yml  publish_pypi.yml  publish_testpypi.yml
docs/: Makefile  conf.py  development.rst  export.export.rst  export.rst  import.import.rst  import.rst  index.rst  llm.txt  llms.txt  make.bat  mindm.mindmanager.rst  mindm.mindmanager_mac.rst  mindm.mindmanager_mac_as.rst  mindm.mindmanager_win.rst  mindm.mindmap_helper.rst  mindm.rst  mindm_serialization.helpers.rst  mindm_serialization.rst  mindm_serialization.serialization.rst  mindmap-json.schema.json  mindmap-yaml.schema.json  mindmap.actions.rst  mindmap.export.rst  mindmap.helpers.rst  mindmap.import.rst  mindmap.mindmap.rst  mindmap.rst  mindmap.serialization.rst  modules.rst  serialization.helpers.rst  serialization.rst  serialization.serialization.rst  setup.md
docs/_static/css/: custom.css
examples/: Test_DOM.mmap  brain_import.py  clone_map.py  clone_map_by_dom.py  deserialize_mermaid.py  deserialize_mermaid_simple.py  get_selection.py  infrastructure.py  serialize.py  serialize_deserialize_mermaid.py  serialize_json_1.py  serialize_json_2.py  serialize_markdown.py  serialize_markdown_requirements.txt  serialize_markmap.py  serialize_mermaid_1.py  serialize_mermaid_2.py  test.py  uppercase.py
examples/export/: export_markdown.py  export_markmap.py  export_mermaid.py
examples/test_dev/: clone_map.py  deserialize_mermaid.py  get_selection.py  get_selection_extended.py  serialize_mermaid_2.py  serialize_mermaid_simple.py  serialize_yaml.py  test.py
mindm/: __init__.py  mindmanager.py  mindmanager_mac.py  mindmanager_mac_as.py  mindmanager_win.py  mindmap_helper.py
mindm/as/: MindManager.sdef.md  read.applescript  read.scpt  write.applescript  write.scpt
mindm_serialization/: serialization.py
mindmap/: actions.py  export.py  helpers.py  mindmap.py  serialization.py
serialization/: serialization.py
skills/mindm-export/: SKILL.md
skills/mindm-export/references/: cli.md
skills/mindm-mindmap/: SKILL.md
skills/mindm-mindmap/references/: cli.md  mermaid.md
tests/: clone_map_by_dom.py  test_actions_cli.py  test_export_smoke.py  test_export_utils.py  test_helpers.py  test_mindmap_creation.py  test_mindmap_document_utils.py  test_mindmap_helper.py  test_mindmap_relationships.py  test_serialization.py  test_smoke_examples.py
