[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mindm"
version = "0.0.1.6"
authors = [
  { name="Robert Zaufall", email="mail@zaufall.de" },
]
description = "Python library for interacting with local installed MindManager(tm) on Windows and MacOS platform."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
]

dependencies = [
  "pywin32; platform_system == 'Windows'",
  "appscript; sys_platform == 'darwin'",
  "regex",
  "markdown"
]

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/robertZaufall/mindm"
Issues = "https://github.com/robertZaufall/mindm/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black",
  "flake8",
]
docs = [
  "furo",
  "sphinx",
  "sphinx-pyproject",
  "sphinx.ext.autodoc",
  "sphinx.ext.napoleon",
  "sphinx.ext.autosummary",
]

[tool.setuptools.packages.find]
include = ["mindm*"]  # package names should match these glob patterns
namespaces = false  # to disable scanning PEP 420 namespaces