[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mindm"
version = "0.0.7.1"
authors = [
  { name="Robert Zaufall" },
]
description = "Python library for interacting with local installed MindManager(tm) on Windows and MacOS platform."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
]

dependencies = [
  "pywin32; platform_system == 'Windows'",
  "appscript; sys_platform == 'darwin'",
  "regex",
  "html2text",
  "markdown"
]

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/robertZaufall/mindm"
Issues = "https://github.com/robertZaufall/mindm/issues"

[project.scripts]
mindm-export = "mindmap.export:main"
mindm-mindmap = "mindmap.actions:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "black",
  "flake8",
  "gitingest",
]
docs = [
  "furo",
  "sphinx",
  "sphinx-pyproject",
  "sphinx.ext.autodoc",
  "sphinx.ext.napoleon",
  "sphinx.ext.autosummary",
  "gitingest",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["mindm", "mindmap"]
namespaces = false  # to disable scanning PEP 420 namespaces

[tool.setuptools.package-data]
mindm = ["as/*.scpt"]

[tool.coverage.run]
branch = true
omit = [
  "mindm/__init__.py",
  "mindmap/__init__.py",
  "mindm/mindmanager.py",
  "mindm/mindmanager_mac.py",
  "mindm/mindmanager_mac_as.py",
  "mindm/mindmanager_win.py"
]

[tool.coverage.report]
skip_covered = true
show_missing = true
